2018-09-26 add upperlowercastsort demo

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -10,5 +10,6 @@
     <packaging>pom</packaging>
     <modules>
         <module>PressEnterContinue</module>
+        <module>UpperLowerCaseSort</module>
     </modules>
 </project>
