2019-04-01 add springboot thread and swagger2

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -11,5 +11,6 @@
     <modules>
         <module>PressEnterContinue</module>
         <module>UpperLowerCaseSort</module>
+        <module>JavaIO</module>
     </modules>
 </project>
