--- a/springboot/SpringBootGateway/src/main/resources/application.yml
+++ b/springboot/SpringBootGateway/src/main/resources/application.yml
@@ -11,15 +11,25 @@ spring:
     name: springboot-gateway
   cloud:
     gateway:
+#      default-filters:
+#        - PrefixPath=/v1,/v2
       discovery:
         locator:
           enabled: true
           lower-case-service-id: true
-#      routes:
-#        - id: client_route
-#          uri: lb://eureka-client
-#          predicates:
-#            - Path=/hello/**
+      routes:
+        - id: eureka-client-v1
+          uri: lb://eureka-client
+          predicates:
+            - Path=/hello1/**
+          filters:
+            - PrefixPath=/v1
+        - id: eureka-client-v2
+          uri: lb://eureka-client
+          predicates:
+            - Path=/hello2/**
+          filters:
+            - PrefixPath=/v2
 eureka:
   client:
     service-url:
